# space-computer

./: .gitignore  Dockerfile  LICENSE  README.md  VISUALIZATION_STRATEGY.md  data-exploration-dashboard.html  data_visualizer.py  docker-compose.yml  explore_data.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_system.sh
backend/: README.md
backend/api/: athlete_endpoints.py  routes.py  verification_endpoints.py
backend/config/: settings.py
backend/core/: action_head.py  action_rgb.py  biomechanical_analysis.py  data_ingestion.py  pose3d.py  pose_pipeline.py  pose_understanding.py  video_feat.py
backend/core/diadochi/: README.md  __init__.py
backend/core/diadochi/core/: __init__.py  chains.py  ensemble.py  mixers.py  mixture_of_experts.py  models.py  routers.py
backend/core/diadochi/evaluation/: __init__.py  metrics.py
backend/llm/: embeddings.py  model.py  model_loader.py
backend/vision/: caption.py
backend/voice/: asr.py  tts.py
datasources/models/: beijing_pose_data.json  bolt-force-motion_pose_data.json  boundary-nz_pose_data.json  chisora_pose_data.json  drogba-header_pose_data.json  hezvo_pose_data.json  koroibete_pose_data.json  lomu_pose_data.json  popescu_pose_data.json  pound_pose_data.json  powell-anchor_pose_data.json  struggle_pose_data.json
datasources/posture/: berlin_biomechanics_analysis.json  berlin_mannequin.json  berlin_motion_analysis.json  bolt_100m_record_side_mannequin.json
docs/: Gemfile  INTEGRATION_GUIDE.md  README.md  _config.yml  api-reference.md  contributing.md  deployment.md  getting-started.md  index.md  models.md  modules.md  orchestration.md  platform.md  use-cases.md  visualization-dashboard.html
docs/_includes/: footer.html  head.html
docs/_layouts/: default.html
docs/lab/: AI_MODELS_README.md  README 2.md  README.md  README_API.md  datasets.md  dynamics.md  motion.md  pose.md  scene.md  solver.md
orchestration/: __init__.py  interpreter.py  meta_orchestrator.py  query_processor.py  rag_engine.py  server.py  solver.py
orchestration/biomech_core/: __init__.py  kinematics.py  kinetics.py  muscle.py  optimization.py  segments.py  stability.py
scripts/: setup_integration.py  test_pose_verification.py
src/components/: AIAnalysisPanel.tsx  AthleteSelector.tsx  VerificationStatus.tsx
src/compositions/: EliteAthleteAnalysis.tsx
